@@ -6,6 +6,7 @@
 -デフォルトロゴを変更しました。
 -静的HTML出力が無効のとき、管理者以外にはエラーメッセージを表示しないよう変更。
 -【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
+-【httpd/EXE】index.htmlを有効化しました。
 -【Fix】稀に最初のファイルアップロードに失敗することがある。
 -他
 
